{
    "name": "InputSystem",
    "maps": [
        {
            "name": "OnGround",
            "id": "76e16808-989a-4eda-ab89-9cff8849e8cc",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "64707d0f-5107-4745-b03e-dcda57365de5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8c3e183f-452c-46e9-bec9-c3b83d8cc3df",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "0e392c21-78fa-4ee9-bd1e-dce71376b630",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "979cc599-a676-4168-8e88-1b584af1b613",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Running",
                    "type": "Button",
                    "id": "960a7202-c79c-41bd-afe5-85d9f073af60",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "OnLight",
                    "type": "Button",
                    "id": "ba5817c6-0ced-4aac-8698-99eb40bb5f32",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KillGame",
                    "type": "Button",
                    "id": "c0264a2c-f6aa-4f17-a66d-9703955ebcc6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "03ede9a3-44b8-4190-9be7-0e0072880945",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "541a56ee-07d7-49a8-b543-eb505825ee84",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "73e37f82-e93c-4452-b7f9-b042daf635be",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "a55ad51f-5c5a-49dd-b229-d093522fb870",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "fe0449b4-e92e-4a38-add8-d0871d7671ad",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "9cc43ea4-e7e6-49d2-a130-f959d88c36a7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "367d1759-7182-48e1-95ef-6f1ae1e5dfa8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Forward",
                    "id": "147a759d-c45e-4cff-a059-becc4c788d68",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Backward",
                    "id": "5884e075-dc89-4b64-b952-45ca365fe313",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "3D Vector",
                    "id": "97519cba-2020-46b5-9339-86aeb6e158d6",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "f56da151-d836-4462-a6cf-716ab9d7616e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "f09df805-766c-4487-b39a-c1dc4f14bf94",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "3e3cd8c7-997b-43cf-8021-1d9f267bb091",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "dacf361e-055b-403d-9ad5-67913be5da29",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Forward",
                    "id": "59396e5b-2ce1-4c2f-b464-7de94dd74737",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Backward",
                    "id": "0606aa84-a849-45d8-ac49-7fb3275e2c95",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a517aabb-3ba1-4da6-a8e7-6327438bb8b4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a025987f-66f5-41b9-8050-5a007cd2c8db",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "211e4a2b-8887-4b3c-bc51-cdf5f821a278",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=50,y=60)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "664f43e9-455e-4c8f-8590-1de194c5717a",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f65b2c56-fb5f-4799-8266-b3dcea2343bb",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69c5bb2e-fa79-47d0-aca5-b0b62057c5e8",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81a02d1f-0027-4566-89f0-530abce50e20",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c70752e5-81e1-4136-a4b1-63043ca024d7",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45ef1357-a7b4-4c4e-9bf8-265c03138637",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60d40f16-327e-4a39-8597-81ccc522fff7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bca0374-112c-4354-9df9-d795a235d927",
                    "path": "<XInputController>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "1a07a56b-19a2-444c-a751-ce629592864f",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "b9a5c289-be99-4f95-a9e2-73fc26bb7ec2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "e045d35c-6a97-4d56-91dd-4fd862624263",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectButton",
                    "type": "Button",
                    "id": "64687ee4-1693-4213-8323-6cb4cab92841",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NOTHING",
                    "type": "Button",
                    "id": "9107f132-b6d2-4523-acfe-ece313514604",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KillGame",
                    "type": "Button",
                    "id": "8624062e-1a21-4e8e-aac0-4d7f45302534",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SettingButton",
                    "type": "Button",
                    "id": "60290301-e317-46b6-aa37-1d0ac654524c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ae62f20-9110-4159-8f6f-e53224679c70",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d532eb8a-c523-4367-8678-3f006bca2357",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4b66d72-f065-4ac6-9c2d-c47663963d18",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "344d8a4f-8d03-4865-8e58-b068b1befaf4",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ff18945-c213-4162-ad25-e4a6b0887150",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd5e6eec-f377-4e6f-9415-41d040f31f9b",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f23719fb-7af1-4ba7-8948-abbb6743d6ee",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NOTHING",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7c2e183-262e-41d5-b556-76717370666c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ff4e02f-9ffc-4bc4-a16a-12ee05684439",
                    "path": "<XInputController>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a8d4adf-4c0c-4446-801a-ea4bed98e97f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SettingButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24d0135a-79f3-407e-b997-c0c2b91aa34a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SettingButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "349746a2-0957-4d0e-8af1-fe8850216e8d",
            "actions": [
                {
                    "name": "RightButton",
                    "type": "Button",
                    "id": "32220be6-cfc5-42f6-a8e8-fd2f4bb59468",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftButton",
                    "type": "Button",
                    "id": "f945108c-a99d-41b6-b15c-9cd247d24e21",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac1d954d-ca87-47cd-a175-3f3562819648",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50b91506-4727-4704-814c-733d39165554",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e00de04-69e0-4825-af63-e8a6279fa7b5",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}